add bearer token