@@ -7,13 +7,10 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority; // Importa el DTO
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.web.bind.annotation.CookieValue;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestBody; // Importa el DTO
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -24,7 +21,6 @@ import com.aniview.authusers.security.JWTUtil;
 import com.aniview.authusers.service.AuthService;
 import com.aniview.authusers.service.AuthTokenService;
 
-import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletResponse;
 
 @RestController
@@ -43,8 +39,8 @@ public class AuthController {
 
     private static final Logger log = LoggerFactory.getLogger(AuthController.class);
 
-    private static final String ROLE_USER = "ROLE_USER"; 
-    private static final String MESSAGE_KEY = "message"; 
+    private static final String ROLE_USER = "ROLE_USER";
+    private static final String MESSAGE_KEY = "message";
 
     @PostMapping("/login")
     public ResponseEntity<Map<String, String>> login(HttpServletResponse response,
@@ -54,18 +50,19 @@ public class AuthController {
 
         if (authService.authenticate(email, password)) {
             String token = jwtUtil.createToken(email, Collections.singletonList(ROLE_USER));
-            Cookie cookie = authTokenService.createAuthCookie(token);
-            response.addCookie(cookie);
-            return ResponseEntity
-                    .ok(Collections.singletonMap(MESSAGE_KEY, "User " + email + " logged in successfully!"));
+            String refreshToken = jwtUtil.createRefreshToken(email);
+
+            // Devuelve el Access Token y Refresh Token al cliente
+            return ResponseEntity.ok(Map.of(
+                    "access_token", token,
+                    "refresh_token", refreshToken));
         } else {
             return ResponseEntity.status(401).body(Collections.singletonMap(MESSAGE_KEY, "Invalid credentials"));
         }
     }
 
     @PostMapping("/register")
-    public ResponseEntity<Map<String, String>> register(HttpServletResponse response,
-            @RequestBody RegisterRequestDto registerRequestDto) {
+    public ResponseEntity<Map<String, String>> register(@RequestBody RegisterRequestDto registerRequestDto) {
         try {
             // Paso 1: Registrar al usuario
             User newUser = authService.register(
@@ -76,18 +73,14 @@ public class AuthController {
                     registerRequestDto.image(),
                     registerRequestDto.password());
 
+            // Crear Access Token y Refresh Token
             String token = jwtUtil.createToken(newUser.getEmail(), Collections.singletonList(ROLE_USER));
-            log.info("Generated Token: {}", token);
+            String refreshToken = jwtUtil.createRefreshToken(newUser.getEmail()); // Agrega el Refresh Token
 
-            Cookie authCookie = authTokenService.createAuthCookie(token);
-
-            response.addCookie(authCookie);
-
-            UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                    newUser.getEmail(), null, Collections.singletonList(new SimpleGrantedAuthority(ROLE_USER)));
-            SecurityContextHolder.getContext().setAuthentication(authentication);
-
-            return ResponseEntity.ok(Collections.singletonMap(MESSAGE_KEY, "User registered successfully!"));
+            // Devuelve el Access Token y el Refresh Token en la respuesta
+            return ResponseEntity.ok(Map.of(
+                    "access_token", token,
+                    "refresh_token", refreshToken));
 
         } catch (IllegalArgumentException e) {
             return ResponseEntity.badRequest().body(Collections.singletonMap(MESSAGE_KEY, e.getMessage()));
@@ -99,12 +92,13 @@ public class AuthController {
 
     @GetMapping("/verify")
     public ResponseEntity<Map<String, String>> verifyToken(
-            @CookieValue(value = "AUTH_TOKEN", required = false) String token) {
-        if (token == null) {
+            @RequestHeader(value = "Authorization") String authorizationHeader) {
+        if (authorizationHeader == null || !authorizationHeader.startsWith("Bearer ")) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Collections.singletonMap(MESSAGE_KEY, "Token is missing"));
+                    .body(Collections.singletonMap(MESSAGE_KEY, "Token is missing or invalid"));
         }
 
+        String token = authorizationHeader.substring(7);
         if (!jwtUtil.validateToken(token)) {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
                     .body(Collections.singletonMap(MESSAGE_KEY, "Invalid token"));
@@ -113,4 +107,20 @@ public class AuthController {
         // Si el token es válido, puedes devolver información adicional si lo deseas
         return ResponseEntity.ok(Collections.singletonMap(MESSAGE_KEY, "Token is valid. Welcome!"));
     }
+
+    @PostMapping("/refresh")
+    public ResponseEntity<Map<String, String>> refreshToken(@RequestBody Map<String, String> body) {
+        String refreshToken = body.get("refresh_token");
+
+        if (refreshToken == null || !jwtUtil.validateRefreshToken(refreshToken)) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(Collections.singletonMap(MESSAGE_KEY, "Invalid or expired refresh token"));
+        }
+
+        String username = jwtUtil.getUsernameFromRefreshToken(refreshToken); // Método en JWTUtil
+
+        String newAccessToken = jwtUtil.createToken(username, Collections.singletonList(ROLE_USER));
+        return ResponseEntity.ok(Collections.singletonMap("access_token", newAccessToken));
+    }
+
 }
